--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main{
     background-color: rgba(255, 235, 205, 0.893); 
     padding: 10px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.566);
-    margin-top: -.3px;
+    margin-top: -24.3pxpx;
     margin-bottom: -19.3px;
     margin-right: -10px;/* negativo bota a margem pra fora p ficar ajustado*/
     margin-left: -10px;
